1998-10-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* month-view.c (month_view_update): Create a list of children and
	lay them out nicely.  Lots of functions added for this purpose.
	(adjust_segment): Main event segment adjustment routine.
	(adjust_children): Adjusts all the children in the month view.
	(child_create_segments): Creates the segments for a particular event.
	(layout_children): Uses the generic layout engine to organize the children.

1998-10-08  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-todo.c (clist_row_selected): Set the sensitivity of the
	edit/delete buttons.
	(gncal_todo_update): Likewise.  Thanks to Dirk Luetjens for the
	bug report.

	* layout.c: Do some cleanup; now we pass a struct with the layout
	algorithm's state instead of passing a trillion parameters around.

	* gncal-full-day.c (layout_children): Use the new generic layout
	engine.
	(child_compare): Sort keys are start time then end time, not just
	start time.  This produces somewhat nicer results for the layout
	algorithm.

	The new layout code uses a partition of the time range occupied by
	the events, rather than using a fixed time granularity.  This is
	better since the different parts of the program that use the
	layout module will have different semantics regarding snapping the
	event bounds to a fixed "time grid".

1998-10-07  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* layout.[ch]: New files that abstract the event layout code from
	gncal-full-day.c into something useful for other parts of the
	program.  Now all event layout is done here.

	* Makefile.am (gnomecal_SOURCES): Added layout.[ch] to the list of
	sources.

1998-10-07  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* main.c (main): Replaced the 'gnome_client_new_default' call with
	'gnome_master_client'.

1998-10-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* timeutil.c (time_day_begin): Changed name from